logs/gu-django-filebrowser-no-grappelli.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/filebrowser'...
Compiling './lib/python3.5/site-packages/filebrowser/functions.py'...
***   File "./lib/python3.5/site-packages/filebrowser/functions.py", line 320
    os.chmod(version_dir, 0775)
                             ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/filebrowser/locale'...
Listing './lib/python3.5/site-packages/filebrowser/locale/ca'...
Listing './lib/python3.5/site-packages/filebrowser/locale/ca/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/filebrowser/locale/cs'...
Listing './lib/python3.5/site-packages/filebrowser/locale/cs/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/filebrowser/locale/de'...
Listing './lib/python3.5/site-packages/filebrowser/locale/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/filebrowser/locale/es'...
Listing './lib/python3.5/site-packages/filebrowser/locale/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/filebrowser/locale/fr'...
Listing './lib/python3.5/site-packages/filebrowser/locale/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/filebrowser/locale/it'...
Listing './lib/python3.5/site-packages/filebrowser/locale/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/filebrowser/locale/nl'...
Listing './lib/python3.5/site-packages/filebrowser/locale/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/filebrowser/locale/pl'...
Listing './lib/python3.5/site-packages/filebrowser/locale/pl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/filebrowser/locale/ru'...
Listing './lib/python3.5/site-packages/filebrowser/locale/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/filebrowser/locale/sr'...
Listing './lib/python3.5/site-packages/filebrowser/locale/sr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/filebrowser/locale/sr_Latn'...
Listing './lib/python3.5/site-packages/filebrowser/locale/sr_Latn/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/filebrowser/locale/zh_CN'...
Listing './lib/python3.5/site-packages/filebrowser/locale/zh_CN/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/filebrowser/locale/zh_TW'...
Listing './lib/python3.5/site-packages/filebrowser/locale/zh_TW/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/filebrowser/management'...
Listing './lib/python3.5/site-packages/filebrowser/management/commands'...
Compiling './lib/python3.5/site-packages/filebrowser/management/commands/version_generator.py'...
***   File "./lib/python3.5/site-packages/filebrowser/management/commands/version_generator.py", line 40
    print "generating versions for: ", path
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/filebrowser/static'...
Listing './lib/python3.5/site-packages/filebrowser/static/filebrowser'...
Listing './lib/python3.5/site-packages/filebrowser/static/filebrowser/css'...
Listing './lib/python3.5/site-packages/filebrowser/static/filebrowser/img'...
Listing './lib/python3.5/site-packages/filebrowser/static/filebrowser/js'...
Listing './lib/python3.5/site-packages/filebrowser/static/filebrowser/uploadify'...
Listing './lib/python3.5/site-packages/filebrowser/static/filebrowser/uploadify/com'...
Listing './lib/python3.5/site-packages/filebrowser/static/filebrowser/uploadify/com/adobe'...
Listing './lib/python3.5/site-packages/filebrowser/static/filebrowser/uploadify/com/adobe/air'...
Listing './lib/python3.5/site-packages/filebrowser/static/filebrowser/uploadify/com/adobe/crypto'...
Listing './lib/python3.5/site-packages/filebrowser/static/filebrowser/uploadify/com/adobe/errors'...
Listing './lib/python3.5/site-packages/filebrowser/static/filebrowser/uploadify/com/adobe/fileformats'...
Listing './lib/python3.5/site-packages/filebrowser/static/filebrowser/uploadify/com/adobe/images'...
Listing './lib/python3.5/site-packages/filebrowser/static/filebrowser/uploadify/com/adobe/net'...
Listing './lib/python3.5/site-packages/filebrowser/static/filebrowser/uploadify/com/adobe/protocols'...
Listing './lib/python3.5/site-packages/filebrowser/static/filebrowser/uploadify/com/adobe/serialization'...
Listing './lib/python3.5/site-packages/filebrowser/static/filebrowser/uploadify/com/adobe/utils'...
Listing './lib/python3.5/site-packages/filebrowser/static/filebrowser/uploadify/com/adobe/webapis'...
Listing './lib/python3.5/site-packages/filebrowser/static/filebrowser/uploadify/example'...
Listing './lib/python3.5/site-packages/filebrowser/static/filebrowser/uploadify/example/_notes'...
Listing './lib/python3.5/site-packages/filebrowser/static/filebrowser/uploadify/example/css'...
Listing './lib/python3.5/site-packages/filebrowser/static/filebrowser/uploadify/example/css/_notes'...
Listing './lib/python3.5/site-packages/filebrowser/static/filebrowser/uploadify/example/scripts'...
Listing './lib/python3.5/site-packages/filebrowser/static/filebrowser/uploadify/example/scripts/_notes'...
Listing './lib/python3.5/site-packages/filebrowser/templates'...
Listing './lib/python3.5/site-packages/filebrowser/templates/filebrowser'...
Listing './lib/python3.5/site-packages/filebrowser/templates/filebrowser/include'...
Listing './lib/python3.5/site-packages/filebrowser/templatetags'...
Compiling './lib/python3.5/site-packages/filebrowser/templatetags/fb_tags.py'...
***   File "./lib/python3.5/site-packages/filebrowser/templatetags/fb_tags.py", line 137
    raise template.TemplateSyntaxError, "%s tag requires 2 arguments" % token.contents.split()[0]
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/filebrowser/templatetags/fb_versions.py'...
***   File "./lib/python3.5/site-packages/filebrowser/templatetags/fb_versions.py", line 70
    raise TemplateSyntaxError, "%s tag requires 2 arguments" % token.contents.split()[0]
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/filebrowser/views.py'...
***   File "./lib/python3.5/site-packages/filebrowser/views.py", line 76
    raise ImproperlyConfigured, _("Error finding Upload-Folder. Maybe it does not exist?")
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gu_django_filebrowser_no_grappelli-3.1.28.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
